// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders with an address 1`] = `
<div
  className={
    Object {
      "data-css-179g4cq": "",
    }
  }
>
  <h3
    className={
      Object {
        "data-css-4ptjc6": "",
      }
    }
  >
    Where is the problem happening?
  </h3>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    City Hall Square
    Boston, MA
  </div>
  <form
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
    onSubmit={[Function]}
  >
    <input
      className={
        Object {
          "data-css-1rqhb6b": "",
        }
      }
      onInput={[Function]}
      placeholder="Search for another address…"
      type="search"
      value=""
    />
    <button
      disabled={true}
      type="submit"
    >
      Search
    </button>
  </form>
  <div
    className={
      Object {
        "data-css-19e7ai6": "",
      }
    }
  >
    <button
      className={
        Object {
          "data-css-1wppbi7": "",
        }
      }
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
    <a
      href="javascript:void(0)"
      onClick={[Function]}
    >
      Continue without location
    </a>
  </div>
</div>
`;

exports[`rendering renders without an address 1`] = `
<div
  className={
    Object {
      "data-css-179g4cq": "",
    }
  }
>
  <h3
    className={
      Object {
        "data-css-4ptjc6": "",
      }
    }
  >
    Where is the problem happening?
  </h3>
  
  <form
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
    onSubmit={[Function]}
  >
    <input
      className={
        Object {
          "data-css-1rqhb6b": "",
        }
      }
      onInput={[Function]}
      placeholder="Search for an address…"
      type="search"
      value=""
    />
    <button
      disabled={true}
      type="submit"
    >
      Search
    </button>
  </form>
  <div
    className={
      Object {
        "data-css-19e7ai6": "",
      }
    }
  >
    <button
      className={
        Object {
          "data-css-1wppbi7": "",
        }
      }
      disabled={true}
      onClick={[Function]}
    >
      Next
    </button>
    <a
      href="javascript:void(0)"
      onClick={[Function]}
    >
      Continue without location
    </a>
  </div>
</div>
`;
